2000-09-11  Mo DeJong  <mdejong@redhat.com>

	* src/error.cpp (PrintUNREACHABLE_DEFAULT_CATCH_CLAUSE):
	Reword the error message, hopefully for the last time.

2000-08-23  Andrew G. Tereschenko  <tag@ibis.odessa.ua>

	* src/incrmnt.cpp (IncrementalRecompilation): Both
	'q' and 'Q' are now acceptable to quit incremental mode.

2000-08-21  Mo DeJong  <mdejong@redhat.com>

	* src/incrmnt.cpp (IncrementalRecompilation): Rewrite
	the user interaction loop for incremental re-compilation.
	We now look for the letter 'q', if that is what the user
	typed, we quit.

2000-08-21  Mo DeJong  <mdejong@redhat.com>

	* src/platform.h (Ostream::setf): Remove
	the setf method, it is not used anywhere
	and it causes the build to fail on the Mac.

2000-08-21  Mo DeJong  <mdejong@redhat.com>

	* src/error.cpp (PrintUNREACHABLE_DEFAULT_CATCH_CLAUSE):
	Reword warning for try block that catches Exception
	but does not contain a method that can raise a
	checked exception.

2000-08-13  Chris Abbey <cabbey@bresnanlink.net>

	* src/stream.cpp (~LexStream): Set columns to NULL
	after deleting it. Don't delete comment_buffer again,
	it is already done in DestroyInput().

2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* jikes.spec: Add default -O3 flag when building
	the release verison of jikes under Red Hat Linux.

2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* src/decl.cpp (CompleteSymbolTable, AddInheritedMethods): Revert
	change meant to fix bug 102. The fix for 102 causes crashes in
	CheckInheritedMethodThrows. We will need to re-address this
	problem after the 1.12 release.

2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* TODO: Updated TODO list with things
	we did not get done before 1.12 release.

2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* src/option.cpp (ArgumentExpanded): Fix core dump
	when processing a @file argument that contains
	the sequence "\n\n".

2000-07-27  Mo DeJong  <mdejong@redhat.com>
 
	* src/system.cpp (GetOutputDirectory): Check for